# vector-chain

./: .gitignore  ADAPTIVE_MEMORY_IMPLEMENTATION.md  ADAPTIVE_RESEARCH_ANALYSIS.md  ARCHITECTURE.md  CLAUDE.md  COMPARISON_RESULTS.md  DIRECTORY_CLEANUP_SUMMARY.md  Dockerfile  Makefile  PROJECT_CLEANUP_SUMMARY.md  README.md  README_PYDANTIC_AI.md  STREAMLIT_ADAPTIVE_MEMORY_INTEGRATION.md  __init__.py  config.py  demo_adaptive_research.py  demo_atomic_agents.py  example_usage.py  logfire_config.py  main.py  pyproject.toml  pytest.ini  quick_memory_demo.py  requirements-dev.txt  run_streamlit.py  run_tests.py  simple_streamlit_test.py  streamlit_app.py  test_adaptive_memory.py  test_financial_tools.py  test_pydantic_ai.py  test_streamlit_logfire.py
agents/: __init__.py  dependencies.py  memory_processors.py  planning_agent.py  research_agent.py
controllers/: __init__.py
controllers/planning_agent/: README.md  SIMPLIFICATION_SUMMARY.md  __init__.py  atomic_executor.py  atomic_planning_agent.py  execution_orchestrator.py  investment_agent.py  planner_schemas.py  schemas.py  test_atomic_components.py  test_simplified.py
docs/: FINANCIAL_DATA_TOOLS.md  build_atomic_agents.md  build_orchistration.md  memory_in_agents.md  orchestrator.md  orchestrator_refactoring_plan.md  preparatory_changes_summary.md  project_analysis.md
investment_chroma_db/: chroma.sqlite3
knowledge_base/AAPL/: AAPL_10K_2023.txt  AAPL_10Q_Q3_2023.txt  AAPL_Analyst_Report_Morgan_Stanley_2023.txt  AAPL_Earnings_Transcript_Q3_2023.txt
knowledge_base/MSFT/: MSFT_10K_2023.txt  MSFT_10Q_Q1_2024.txt  MSFT_Analyst_Report_Bernstein_2023.txt  MSFT_Earnings_Transcript_Q1_2024.txt
knowledge_base_sre/: incident_response.txt  processed_sre_documents.json  sre_handbook.md  sre_incidents.json
models/: __init__.py  schemas.py
orchestration_engine/: __init__.py
orchestration_engine/agents/: choice_agent.py  qa_agent.py  query_agent.py  rag_qa_agent.py  rag_query_agent.py
orchestration_engine/examples/: demo_orchestrator.py
orchestration_engine/schemas/: __init__.py  orchestrator_schemas.py
orchestration_engine/services/: chroma_db.py
orchestration_engine/tools/: searxng_search.py  test_searxng_single_request.py
orchestration_engine/tools/deep_research/: __init__.py  (+6 more)
orchestration_engine/utils/: __init__.py  config_manager.py  context_utils.py  interfaces.py  orchestrator_core.py  tool_manager.py
tests/: README.md  README_TESTS.md  conftest.py  test_utils.py
tests/agents/: test_research_agent_full.py
tests/e2e/: test_full_pipeline.py  test_full_system.py
tests/integration/: main_with_rag_logging.py  test_financial_integration.py  test_main_force_rag.py  test_planning_research_flow.py  test_rag_calculator_flow.py  test_research_workflow.py  test_web_search_scraper_flow.py
tests/manual/: test_rag_with_logging.py
tests/rag/: simple_rag_test.py  test_chromadb_direct.py  test_rag_agent_only.py  test_rag_only.py  verify_rag_integration.py
tools/: __init__.py  alpha_vantage.py  calculator.py  financial_data.py  pdf_extractor.py  vector_search.py  web_scraper.py  web_search.py
(+13 files in other folders)
